deployments/kubernetes/base/merchant_business/merchant_business-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: merchant-business
  namespace: payment-gateway
spec:
  selector:
    app: merchant-business
  ports:
    - name: http-metrics
      port: 8096
      targetPort: 8096
    - name: grpc
      port: 50066
      targetPort: 50066
  type: ClusterIP
